# rust-starter

./: Cargo.toml
src/: lib.rs  main.rs
src/cli/: mod.rs
src/cli/subcommands/: completions.rs
src/conf/: mod.rs
