[package]
name = "sample_app"
version = "0.1.0"
authors = ["tobi <tobias@flightkeys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]

# cli
clap_generate = "3.0.0-beta.2"
clap = {version = "3.0.0-beta.2", features = ["default"]}


# logging
tracing = "0.1.25"
tracing-subscriber = "0.2.16"

# conf
dotenv = "0.15.0"
config = {version="0.10.1", features = ["default"]}
serde = {version="1.0.123", features = ["derive"]}


# error handling
thiserror ="1.0.24"